# SoftManiSim

./: README.md  install_dependencies.sh
Keyboard/: keyboardThread.py
SoftManipulatorEnv/SoftManipulatorEnv/: SoftManipulatorEnv.py  (+5 more)
environment/: BasicEnvironment.py
environment/urdf_models/spotmicro_proprio_dachshund/: CMakeLists.txt  package.xml
environment/urdf_models/spotmicro_proprio_dachshund/config/: joint_names_spotmicro_proprio_dachshund.yaml
environment/urdf_models/spotmicro_proprio_dachshund/launch/: display.launch  gazebo.launch
environment/urdf_models/spotmicro_proprio_dachshund/meshes/: FL_hip.STL  FL_lower_leg.STL  FL_upper_leg.STL  FR_hip.STL  FR_lower_leg.STL  FR_upper_leg.STL  RL_hip.STL  RL_lower_leg.STL  RL_upper_leg.STL  RR_hip.STL  RR_lower_leg.STL  RR_upper_leg.STL
environment/urdf_models/spotmicro_proprio_dachshund/urdf/: spotmicro_proprio_dachshund.csv  spotmicro_proprio_dachshund.urdf
environment_Yumi/: basicEnv.py  testgptchat.py  utilities.py  yumiEnv.py  yumiEnvLongFinger.py  yumiEnvSpatula.py
pybullet_env/: BasicEnvironment.py  BasicEnvironment_ThreeSegments.py  BasicEnvironment_TwoSegments.py
scripts/: BasicTest_manipulator_single.py  BasicTest_manipulator_single_PD_control.py  BasicTest_manipulator_single_tele_op.py  BasicTest_manipulator_single_tele_op_cylinder.py  BasicTest_manipulator_two_robot.py  CPG.py  mini_spot_test.py
visualizer/: SampleSubplots.py  Subplots2D-ClosedLoopMLPFull.py  Subplots2D-ClosedLoopNode.py  Subplots2D-OpenLoopNode.py  Subplots2D.py  surfPlot.py  test.py  visualizer.py
(+32 files in other folders)
